# BTP-Project

./: .gitignore  README.md  btp.py  evaluate.py  main.py  predict.py  pyproject.toml  train.py  validate_test.py  validation_indices.json
btp/: model.py
btp/data/: dataset.py  loader.py
btp/detection/: head.py
btp/features/: events.py  images.py
btp/fusion/: acmf.py  utils.py
btp/processing/: events.py  images.py
btp/scripts/: data_inspection.py  image_inspection.py  processed_event_data_inspection.py  processed_image_inspection.py
btp/training/: loss.py
btp/visualization/: analysis.py  events.py  images.py
